2011-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Remove rarely-used PFA generation

	* scripts/gen.mk.in:
	  - Remove %.pfa rule.
	* configure.ac:
	  - Remove --enable-pfa option.
	  - Remove INCLUDE_PFA and INCLUDE_TYPE1 conditions.
	* arundina/Makefile.am:
	  - Remove pfa referrals.
	  - Remove INCLUDE_PFA and INCLUDE_TYPE1 conditions.

2011-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Use Type 1 instead of TrueType for LaTeX, for better LIGKERN support.

	* scripts/gen.mk.in:
	  - Add %.afm build target.
	* latex/texfont.mk.am:
	  - Remove ttf-to-afm rule.
	  - Build & install *.ttf instead of *.pfb.
	* arundina/Makefile.am:
	  - Change pfb to ttf for symlink rules.
	  - Add symlink rules for afm.

2011-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* arundina/Makefile.am:
	  - Fix wrong symlink sources for arunmono*.ttf.

2011-10-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add synthetic slant shape for Serif

	* latex/texfont.mk.am:
	  - Add rules for generating slanted TFM & VF. Synthetic slants are
	    suffixed with '_so' for rule matching, and listed in SYNTH_FONTS.
	* arundina/Makefile.am:
	  - Add SYNTH_FONTS listing.
	* latex/ltharunserif.fd:
	  - Rename slant fonts to *_so.

2011-10-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* latex/examples/testdoc.tex: Correct font names.

2011-10-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add preliminary LaTeX fonts generation

	* configure.ac:
	  - Add --enable-latex, --with-texmfdir configure options.
	  - Add checks for TeX font tools.
	* configure.ac, Makefile.am, +latex/:
	  - Add latex/ subdir.
	* +latex/Makefile.am, +latex/fonts-arundina.sty,
	  +latex/ltharunsans.fd, +latex/ltharunmono.fd, +latex/ltharunserif.fd:
	  - Add LaTeX style & font descriptors.
	* latex/Makefile.am, +latex/texfont.mk.am arundina/Makefile.am:
	  - Add automake snippet for building TeX fonts
	  - Add it to font make rules